# speckit-to-issue

./: .coverage  .gitignore  README.md  pyproject.toml
specs/: constitution.md
specs/001-tasks-to-issues/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-spec-context-injection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-feature-level-issues/: architecture.md  spec.md  tasks.md
src/speckit_to_issue/: __init__.py  cli.py  exceptions.py  feature_builder.py  github.py  labels.py  mapper.py  models.py  parser.py  spec_reader.py
tests/: conftest.py
tests/integration/: test_cli.py
tests/unit/: test_feature_builder.py  test_github.py  test_mapper.py  test_models.py  test_parser.py  test_spec_reader.py
