[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speckit-to-issue"
version = "0.1.0"
description = "Convert speckit tasks.md files to GitHub issues for AI SDLC workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Speckit Team" }
]
keywords = ["speckit", "github", "issues", "ai", "sdlc", "copilot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
speckit-to-issue = "speckit_to_issue.cli:app"

[project.urls]
Homepage = "https://github.com/speckit/speckit-to-issue"
Repository = "https://github.com/speckit/speckit-to-issue"

[tool.hatch.build.targets.wheel]
packages = ["src/speckit_to_issue"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --cov=speckit_to_issue --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.coverage.run]
source = ["src/speckit_to_issue"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
